--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
+    "expo": "41",
     "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "0.63.4",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
