--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@react-native-community/masked-view": "0.1.10",
     "expo": "^43.0.0",
     "expo-constants": "~12.1.3",
+    "expo-notifications": "~0.13.3",
+    "expo-secure-store": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "2.2.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "0.17.1",
     "react-navigation": "4",
     "react-navigation-drawer": "2.7.2",
@@ -30,6 +34,7 @@
     "react-redux": "7.2.0",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
+    "redux-persist": "5.9.1",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
