--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "6.0.2",
     "expo": "^43.0.0",
     "expo-constants": "~12.1.3",
+    "expo-image-picker": "~11.0.3",
     "expo-mail-composer": "~11.0.3",
     "expo-notifications": "~0.13.3",
+    "expo-permissions": "~13.0.3",
     "expo-secure-store": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
@@ -32,6 +35,7 @@
     "react-navigation": "4",
     "react-navigation-drawer": "2.7.2",
     "react-navigation-stack": "2",
+    "react-navigation-tabs": "^2.11.2",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
